Added new logic for error handling in getProducts method